enhance text fields creation